# ml-ops-api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GETTING-STARTED.md  INFERENCE_PLATFORM.md  NIX.md  README.md  ROADMAP.md  default.nix  docker-compose.yml  flake.nix  justfile
.gemini/: settings.json
.gemini/hooks/: welcome.sh
.github/: ci.yml  docker.yml
.github/workflows/: README.md  ci.yml  docker.yml  release.yml
api/: Cargo.toml
api/src/: auth.rs  backends.rs  db.rs  inference.rs  lib.rs  main.rs  metrics.rs  nats.rs  orchestrator.rs  router.rs  vram.rs  websocket.rs
api/src/backends/: llamacpp.rs  vllm.rs
api/tests/: integration_tests.rs
arch-analyzer/: Makefile  analyze.sh
arch-analyzer/src/: analyzer.py
config/: integrations.yaml
python/: pyproject.toml
python/mlops/: __init__.py  models.py
python/mlops/llm/: __init__.py  client.py  config.py
python/mlops/llm/providers/: __init__.py  anthropic.py  base.py  llamacpp.py  ml_offload.py  openai.py
python/mlops/optimization/: __init__.py  optimizer.py
python/mlops/plugins/: __init__.py  cerebro_optimizer.py
python/mlops/reasoning/: __init__.py  dspy_adapter.py  ensemble_reasoning.py
python/mlops/tracking/: __init__.py  cost_tracker.py
python/tests/: conftest.py  test_cerebro_optimizer.py  test_cost_tracker.py  test_llm_client.py  test_optimizer.py
python/tests/reasoning/: test_ensemble.py
tensorforge/: Cargo.toml  README.md  flake.nix
tensorforge/backends/llamacpp/: Cargo.toml
tensorforge/backends/llamacpp/src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs
tensorforge/backends/vllm/: Cargo.toml
tensorforge/backends/vllm/src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs
tensorforge/config/: default.toml
tensorforge/core/: Cargo.toml
tensorforge/core/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  types.rs  utils.rs  vram.rs
tensorforge/nix/b200-optimized/: default.nix
tensorforge/scripts/: Makefile  bootstrap-nix.sh  bootstrap.sh  entrypoint.sh  export.sh  health.sh  infer.sh  install-deps.sh  model-pull.sh  run.sh  server.sh  setup-shell.sh
