[package]
name = "ml-offload-api"
version = "0.1.0"
edition = "2021"
authors = ["kernelcore"]
description = "ML Offload Manager - Unified REST API for ML model orchestration"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

# HTTP client (for backend communication)
reqwest = { version = "0.11", features = ["json"] }

# NVIDIA GPU monitoring
nvml-wrapper = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# NATS event bus
async-nats = "0.37"

# Process management
sysinfo = "0.30"

[dev-dependencies]
# Testing framework enhancements
tokio-test = "0.4"
pretty_assertions = "1.4"
# Integration testing
axum-test = "15.2"
# HTTP client for tests
reqwest = { version = "0.11", features = ["json"] }
# Mocking
mockall = "0.12"
tempfile = "3.8"
# Async traits for mocking
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
