[package]
name = "ml-offload-api"
version = "0.1.0"
edition = "2021"
authors = ["kernelcore"]
description = "ML Offload Manager - Unified REST API for ML model orchestration"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database — updated from 0.7 (RUSTSEC-2024-0363)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# HTTP client — updated from 0.11 (unmaintained rustls-pemfile)
reqwest = { version = "0.12", features = ["json", "stream"] }

# NVIDIA GPU monitoring
nvml-wrapper = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# NATS event bus — updated from 0.37 (RUSTSEC-2026-0049 via rustls-webpki)
async-nats = "0.38"

# Process management
sysinfo = "0.32"
async-trait = "0.1"
tempfile = "3.8"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

[dev-dependencies]
tokio-test        = "0.4"
pretty_assertions = "1.4"
axum-test         = "15.2"
reqwest           = { version = "0.12", features = ["json"] }
mockall           = "0.13"
tempfile          = "3.8"
async-trait       = "0.1"
mockito = "1.7.2"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
