[workspace]
resolver = "2"
members = [
    "core",
    "backends/vllm",
    "backends/llamacpp",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
futures = "0.3"
async-trait = "0.1"
prometheus = { version = "0.13", features = ["process"] }
metrics = { version = "0.21" }
metrics-exporter-prometheus = "0.11"
nvml-wrapper = "0.11"
sysinfo = "0.30"
dashmap = "5.5"
crossbeam = "0.8"
once_cell = "1.19"
arc-swap = "1.6"
